# the-interpreter-book

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json
include/: token.h
src/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.cpp  token.hpp
tests/: lexer_test.cpp  parser_test.cpp
